--- a/WpfApp1/Window_/ViewWindow.xaml
+++ b/WpfApp1/Window_/ViewWindow.xaml
@@ -32,10 +32,55 @@
                         <TextBlock VerticalAlignment="Center" FontSize="15" Margin="5,5,0,5" Text="Поиск"/>
                         <TextBox HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Margin="5,5,0,5" Text="" MinWidth="100"/>
                     </StackPanel>
+            
+            <!--сообщения-->
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="200" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
+                <ListView x:Name="livi2" Grid.Column="0" SelectionChanged="livi2_SelectionChanged">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding ConversationName}" />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
 
-
+                <ListView x:Name="livi" Grid.Column="1">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding SenderName}" FontWeight="Bold" />
+                                <TextBlock Text="{Binding Text}" Margin="5,0" />
+                                <TextBlock Text="{Binding SentDate, StringFormat='{}{0:HH:mm}'}" Foreground="Gray" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <!-- Код из Части 1 -->
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBox x:Name="tbMessage" Grid.Column="0" Margin="5" />
+                    <Button Grid.Column="2" Content="Отправить" Click="SendMessage" Foreground="White" Margin="5" />
+                    <Button Grid.Column="1" Content="Фаил" x:Name="btSendfile" Click="btSendfile_Click" Foreground="White" Margin="5" />
+                </Grid>
+            </Grid>
+        </Grid>
        
         <!-- задачи и записи -->
         <Grid Grid.Column="2">
