--- a/WpfApp1/Window_/AddConversation.xaml
+++ b/WpfApp1/Window_/AddConversation.xaml
@@ -6,11 +6,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1.Window_"
         mc:Ignorable="d"
-        Title="Создать беседу" Height="1000" Width="1000">
+        Title="Создать беседу" Height="450" Width="450">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
