--- a/WpfApp1/Window_/ViewWindow.xaml
+++ b/WpfApp1/Window_/ViewWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp1.Window_"
         mc:Ignorable="d"
         Title="ViewWindow" MinHeight="720" MinWidth="1080" IsVisibleChanged="Window_IsVisibleChanged"  >
-    
+
     <Grid Background="#f1f3f9">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="480*"/>
@@ -64,7 +64,7 @@
                             </StackPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                  
+
                 </ListView>
             </Grid>
             <Grid Grid.Row="1">
@@ -77,7 +77,7 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-               
+
 
                 <Grid Grid.Row="1" Grid.ColumnSpan="2" Margin="5" Grid.RowSpan="2">
                     <Grid.ColumnDefinitions>
@@ -108,17 +108,19 @@
                         <DataGrid  AutoGenerateColumns="False" Background="#f1f3f9" x:Name="data1" Grid.ColumnSpan="2">
                             <DataGrid.Columns>
                                 <DataGridCheckBoxColumn Header="Статус" Binding="{Binding Status}"/>
+                                <DataGridTextColumn Header="Дедлайн" Binding="{Binding DueDate,StringFormat='{}{0:d}'}"/>
                                 <DataGridTextColumn Header="Текст" Binding="{Binding TaskDescription}"/>
-                                <DataGridTextColumn Header="Создано" Binding="{Binding CreatedDate}"/>
-                                <DataGridTextColumn Header="Дедлайн" Binding="{Binding DueDate}"/>
+                                <DataGridTextColumn Header="Создано" Binding="{Binding CreatedDate,StringFormat='{}{0:d}'}" />
                             </DataGrid.Columns>
                         </DataGrid>
-                        <StackPanel  HorizontalAlignment="Left" 
+                        <StackPanel Orientation="Horizontal"  HorizontalAlignment="Left" 
                                      VerticalAlignment="Bottom">
                             <Button Content="➕" Margin="5" Padding="1" FontSize="20" Foreground="White"  FontFamily="Arial Black" x:Name="btAddTaske" Click="btAddTaske_Click"/>
+                            <Button Content="✖️" Margin="5" Padding="1" FontSize="20" Foreground="White" FontFamily="Arial Black" x:Name="btDellTask" Click="btDellTask_Click"/>
+
                         </StackPanel>
                         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Column="1">
-                            <Button Content="✔️" Margin="5" Padding="1" FontSize="20" Foreground="White" FontFamily="Arial Black"/>
+                            <Button x:Name="SaveTasksButton" Click="SaveTasksButton_Click" Content="✔️" Margin="5" Padding="1" FontSize="20" Foreground="White" FontFamily="Arial Black"/>
                         </StackPanel>
                     </Grid>
                 </TabItem>
@@ -128,14 +130,15 @@
                         <DataGrid AutoGenerateColumns="False" Background="#f1f3f9" x:Name="data2">
                             <DataGrid.Columns>
                                 <DataGridTextColumn  Header="Текст" Binding="{Binding NoteText}"/>
-                                <DataGridTextColumn  Header="Создано" Binding="{Binding CreatedDate}"/>
+                                <DataGridTextColumn  Header="Создано" Binding="{Binding CreatedDate,StringFormat='{}{0:d}'}"/>
                             </DataGrid.Columns>
                         </DataGrid>
-                        <StackPanel  HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="1">
+                        <StackPanel Orientation="Horizontal"  HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="1">
                             <Button Content="➕" Margin="5" Padding="1" FontSize="20" Foreground="White" FontFamily="Arial Black" x:Name="btAddNote" Click="btAddNote_Click"/>
+                            <Button Content="✖️" Margin="5" Padding="1" FontSize="20" Foreground="White" FontFamily="Arial Black" x:Name="btDellNote" Click="btDellNote_Click"/>
                         </StackPanel>
                         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                            <Button Content="✔️" Margin="5" Padding="1" FontSize="20" Foreground="White" FontFamily="Arial Black"/>
+                            <Button x:Name="SaveNotesButton" Click="SaveNotesButton_Click" Content="✔️" Margin="5" Padding="1" FontSize="20" Foreground="White" FontFamily="Arial Black"/>
                         </StackPanel>
                     </Grid>
                 </TabItem>
